k8s/apps/base/network-policy/allow-alb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-to-user-service
  namespace: fiveline
spec:
  podSelector:
    matchLabels:
      app: user-service
  ingress:
    - from:
        - ipBlock:
            cidr: 10.10.0.0/23
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-to-product-service
  namespace: fiveline
spec:
  podSelector:
    matchLabels:
      app: product-service
  ingress:
    - from:
        - ipBlock:
            cidr: 10.10.0.0/23
      ports:
        - protocol: TCP
          port: 8002
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-to-order-service
  namespace: fiveline
spec:
  podSelector:
    matchLabels:
      app: order-service
  ingress:
    - from:
        - ipBlock:
            cidr: 10.10.0.0/23
      ports:
        - protocol: TCP
          port: 8003
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-to-admin-service
  namespace: fiveline
spec:
  podSelector:
    matchLabels:
      app: admin-service
  ingress:
    - from:
        - ipBlock:
            cidr: 10.10.0.0/23
      ports:
        - protocol: TCP
          port: 8004
