k8s/apps/base/network-policy/allow-argo-rollouts.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-argo-rollouts-analysis
  namespace: fiveline
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argo-rollouts
      ports:
        - protocol: TCP
          port: 8003
