k8s/apps/base/network-policy/default-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: fiveline
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
